apps/grafana-mcp/base/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-mcp-to-grafana
spec:
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: grafana
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: grafana
          app.kubernetes.io/name: grafana
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mcp-server
      app.kubernetes.io/instance: grafana-mcp
      app.kubernetes.io/name: grafana-mcp
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metrics-to-grafana-mcp
spec:
  ingress:
  - ports:
    - port: 8000
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-prometheus-stack
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: kube-prometheus-stack-prometheus
          app.kubernetes.io/name: prometheus
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mcp-server
      app.kubernetes.io/instance: grafana-mcp
      app.kubernetes.io/name: grafana-mcp
  policyTypes:
  - Ingress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy
      app.kubernetes.io/name: alloy
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
